--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root{
-    --bg-light-blue: #BCCEE4;
+    --bg-light-blue: #B4D0E7;
     --btn-blue: #0061FE;
     --btn-white: #FFF;
     --bg-clients: #F5F5F5;
@@ -18,6 +18,8 @@ img{
 
 body{
     font-family: 'Open Sans', sans-serif;
+    margin-top: 70px;
+    /* background-color: green; */
 }
 .debug{
     border: 1px solid green;
@@ -34,13 +36,22 @@ a{
     color: black;
 }
 
+/* text */
+h1{
+    font-size: 4vw;
+    font-weight: 800;
+    display: block;
+    width: 100%;
+    padding: 50px 0;
+}
+
 /* UTILS */
 .d-flex{
     display: flex;
 }
 
 .btn{
-    padding: 5px 7px;
+    padding: 8px 12px;
 }
 .btn-blue{
     background-color: var(--btn-blue);
@@ -51,16 +62,18 @@ a{
 }
 
 .main-container{
-
+    
 }
 
 .big-container{
-    
+    width: 70%;
+    justify-content: center;
 }
 
 
 /* HEADER */
 header{
+    background-color: white;
     position: fixed;
     top: 0;
     height: 70px;
@@ -107,6 +120,34 @@ header section ul li:not(.logo):hover{
     border-bottom: 2px solid black;
     font-weight: 500;
 }
+
 header section .btn{
     margin-right: 20px;
+}
+
+
+/* MAIN */
+.jumbotron{
+    background-color: var(--bg-light-blue);
+    justify-content: center;
+    height: 690px;
+    padding-top: 30px;
+}
+.jumbotron .item-j{
+    width: 100%;
+}
+.jumbotron .item-j .jumbo-text{
+    width: 30%;
+    font-size: 1vw;
+}
+.jumbotron .item-j .jumbo-img{
+    width: 80%;
+    max-width: 800px;
+}
+.jumbotron .item-j .jumbo-text > *{
+    margin-bottom: 40px;
+}
+.jumbotron .item-j .jumbo-text .freccia{
+    font-size: 2.7rem;
+    padding-bottom: 50px;
 }
