--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ h1{
     display: block;
     width: 100%;
     min-width: 880px;
-    padding: 50px 0;
+    /* padding: 50px 0; */
 }
 h2{
     font-size: 2.2rem;
@@ -93,12 +93,14 @@ header{
     width: 100%;
     font-size: .9rem;
     overflow: auto;
+    z-index: 999;
 }
 header section{
     height: 100%;
     justify-content: space-between;
     align-items: center;
 }
+
 header section img{
     width: 120px;
 }
@@ -143,9 +145,13 @@ header section .btn{
 .jumbotron{
     background-color: var(--bg-light-blue);
     justify-content: center;
-    height: 690px;
+    height: 660px;
     padding-top: 30px;
     margin-bottom: 150px;
+}
+section .big-container{
+    position: relative;
+    top: 80px;
 }
 .jumbotron .item-j{
     width: 100%;
@@ -165,7 +171,7 @@ header section .btn{
     margin-bottom: 40px;
 }
 .jumbotron .item-j .jumbo-text .freccia{
-    font-size: 3vw;
+    font-size: 3rem;
     padding-bottom: 50px;
 }
 
@@ -178,9 +184,18 @@ header section .btn{
     min-width: 400px;
     justify-content: space-between;
 }
-.main-container .plans .check-radio input[type="radio"]:focus{
-    border: #0061FE;
-    background: transparent;
+.main-container .plans .check-radio div{
+    display: inline-block;
+    vertical-align: middle;
+}
+.main-container .plans .check-radio .check-fatturazione{
+    width: 20px;
+    height: 20px;
+    border: 2px solid rgba(128, 128, 128, 0.582);
+    border-radius: 50%;
+}
+.main-container .plans .check-radio .check-fatturazione.check-active{
+    border: 5px solid #0061FE;
 }
 
 /* BOX CARDS */
