--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ section .big-container{
 /* BOX CARDS */
 .main-container .box-cards{
     width: 100%;
-    height: 950px;
+    height: 1100px;
     margin-top: 50px;
 }
 .box-cards .card{
@@ -226,6 +226,7 @@ section .big-container{
 }
 .card .body-card{
     padding: 30px 20px;
+    height: 100%;
     flex-direction: column;
 }
 /* TOP BODY CARD */
@@ -270,4 +271,20 @@ section .big-container{
 }
 .card .body-card .centre-body .buy-now a:active{
     color: red;
+}
+
+/* BOTTOM CARD */
+.card .body-card .bot-body ul{
+    margin-top: 35px;
+    margin-left: 15px;
+    list-style-type: '\f00c';
+    /* color: rgb(0, 97, 254); */
+}
+.card .body-card .bot-body ul li{
+    font-family: Fontawesome;
+    margin: 20px 0;
+    padding-left: 5px;
+}
+.card .body-card .bot-body ul li span{
+    font-family: 'Open Sans';
 }
