--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ h1{
 }
 h2{
     font-size: 2.2rem;
+    margin-bottom: 50px;
 }
 h3{
     font-size: 1.5rem;
@@ -152,7 +153,8 @@ header section .btn{
 
 /* MAIN */
 .plans,
-.partner{
+.partner,
+.business{
     margin-bottom: 150px;
 }
 
@@ -190,9 +192,6 @@ section .big-container{
 }
 
 /* MAIN CONTAINER */
-.main-container .plans h2{
-    margin-bottom: 50px;
-}
 .main-container .plans .check-radio{
     width: 45%;
     min-width: 400px;
@@ -344,4 +343,17 @@ section .big-container{
 }
 .partner .partner-text .btn:hover{
     background-color: var(--border-gray);
+}
+
+/* DROPBOX BUSINESS */
+.business{
+    flex-wrap: wrap;
+}
+.business .card-business{
+    width: calc(100% / 3);
+    flex-direction: column;
+    padding: 20px 15px 40px 15px;
+}
+.business .card-business h3{
+    margin: 15px 0 30px 0;
 }
