--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ h1{
     display: block;
     width: 100%;
     min-width: 880px;
-    /* padding: 50px 0; */
+    padding-bottom: 50px;
 }
 h2{
     font-size: 2.2rem;
@@ -92,6 +92,11 @@ h4{
     width: 55px;
     border-top: 2px solid var(--border-gray);
     margin: 40px 0 50px 0;
+}
+
+.default-link{
+    color: purple;
+    text-decoration: underline;
 }
 
 /* HEADER */
@@ -154,7 +159,8 @@ header section .btn{
 /* MAIN */
 .plans,
 .partner,
-.business{
+.business,
+.pre-gallery{
     margin-bottom: 150px;
 }
 
@@ -162,10 +168,9 @@ header section .btn{
     background-color: var(--bg-light-blue);
     justify-content: center;
     height: 660px;
-    padding-top: 30px;
     margin-bottom: 150px;
 }
-section .big-container{
+.jumbotron .big-container{
     position: relative;
     top: 80px;
 }
@@ -177,6 +182,7 @@ section .big-container{
     width: 30%;
     min-width: 250px;
     font-size: .9rem;
+    font-weight: 500;
 }
 .jumbotron .item-j .jumbo-img{
     width: 80%;
@@ -270,10 +276,6 @@ section .big-container{
     padding: 13px 0;
     margin-top: 30px;
 }
-.card .body-card .centre-body .buy-now a{
-    color: purple;
-    text-decoration: underline;
-}
 .card .body-card .centre-body .buy-now a:active{
     color: red;
 }
@@ -356,4 +358,9 @@ section .big-container{
 }
 .business .card-business h3{
     margin: 15px 0 30px 0;
+}
+
+/* PRE GALLEY */
+.pre-gallery{
+    width: 70%;
 }
