--- a/css/style.css
+++ b/css/style.css
@@ -477,3 +477,17 @@ header section .btn{
 }
 
 /* FAQ */
+.faq{
+    width: 100%;
+}
+.row-faq{
+    width: 100%;
+    justify-content: space-between;
+    padding: 40px 0;
+    border-top: 1px solid black;
+    font-weight: 600;
+}
+.row-faq i{
+    margin-right: 40px;
+    font-size: .8rem;
+}
